# OptimalBragg

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG  CLAUDE.md  CODEMAP.md  CONTRIBUTING.md  LICENSE  README.md  coatingDev.yml  environment.yml  pyproject.toml  run_full_pipeline.py  setup.py
AlGaAs/: AlGaAsModel.m  calcAbsorption_AlGaAs.m  calcEField_AlGaAs.m  cornerPlt_AlGaAs.py  doAlGaAs.m  doMC_AlGaAs.m  doPR3.m  getMirrorCost.m  hyperPlot.py  plotLayers_AlGaAs.py  plotTOnoise.m  testGaAs.m  tune_doAlGaAs.m
Arms/: ETM_params.yml  ITM_params.yml  aLIGO_SiO2Ta2O5.yaml  als_stack.py  cornerPlt.py  cornerPlt_ITM.py  doETM.m  doETMmany.m  doITM.m  doMC.py  doMC_ITM.py  greenFinesse.py  histETM.m  mkETM.py  mkITM.py  optETM.m  optETM2.m  optITM.m  optPRM.m  optSRM.m  optimize.m  plot_ETM.py  plot_ITM.py
OptimalBragg/: __init__.py  __main__.py  cli.py  costs.py  io.py  layers.py  materials.py  mc.py  mc_pipeline.py  noise.py  optimizer.py  plot.py  report.py
PRC/: README.md  doMC.m  doPR3.m  doPR3AR.m  doSens.m  getMirrorCost.m  getMirrorCost_AR.m  makeSpecREFLplot.m  plotLayers.m  plotTO120.m
PRC_new/: doSens_40m_PR3.m  getCost_40m_PR3.m  runSwarm_40m_PR3.m
SiN_aSi/: .gitignore  ETM.yaml  ETM_params.yml  ITM_params.yml  Ta2O5_ETM.yml  Ta2O5_ITM.yml  aSiModel.m  aSiModel.yaml  aSiSiN.yaml  cornerPlt.py  doMC.py  mkETM.py  mkITM.py  mkMirror.py  params.yml  plot_ETM.py  plot_ITM.py  plot_emissivity.py  plotlayers.py  starfish.py
Ta2O5_Voyager/: ETM_params.yml  ITM_params.yml  README.md  Ta2O5Model.m  Ta2O5_ETM.yml  doMC.py  mkETM.py  mkITM.py  mkMirror.py  params.yml  plot_ETM.py  plot_ITM.py  plot_emissivity.py  plotlayers.py  starfish.py
aSi_Voyager/: README.md  aSiModel.m  mkMirror.py  (+2 more)
(+231 files in other folders)
