[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "coatings"
version = "0.1.0"
description = "Optical coating optimization for gravitational wave detector mirrors"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["generic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-k not slow')"]
