[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "OptimalBragg"
version = "0.2.0"
description = "Optical coating optimization for gravitational wave detector mirrors"
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/CaltechExperimentalGravity/OptimalBragg"

[project.scripts]
optimalbragg = "OptimalBragg.cli:main"

[project.optional-dependencies]
docs = ["sphinx", "pydata-sphinx-theme"]

[tool.setuptools.packages.find]
include = ["OptimalBragg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-k not slow')"]
